<resources>
    <string name="app_name">LumiMonitor</string>
    <string name="dataUnavailable">No data is available in the database.</string>
    <string name="viewData">View Baby Data</string>
    <string name="reminders">Reminders</string>
    <string name="email" translatable="false">E-mail</string>
    <string name="password">Password</string>
    <string name="checkPassword">Check Password</string>
    <string name="register">Register</string>
    <string name="emailHint">Enter E-mail Address</string>
    <string name="passwordHint">Enter Password</string>
    <string name="confirmPasswordHint">Confirm Password</string>
    <string name="login">Login</string>
    <string name="babyLogin">Baby Data Login</string>
    <string name="babyView">Baby View</string>
    <string name="lights">Lights</string>
    <string name="ptt">Refresh Stream</string> <!-- Originally "Take a Picture" -->
    <string name="music">Music</string>
    <string name="username">Username </string>
    <string name="temp">Temperature: </string>
    <string name="humid">Humidity: </string>
    <string name="lightVal">Light Value: </string>
    <string name="awaken">Awaken Time:  </string>
    <string name="musicPlay">Music Is Now Playing</string>
    <string name="musicStop">The Music Has Stopped Playing</string>
    <string name="epEmpty">Email and password cannot be empty</string>
    <string name="loginSuccess">Login successful!</string>
    <string name="authFailed">Authentication failed.</string>
    <string name="passMatch">The password does not match, cannot continue</string>
    <string name="empField">The email and/or password cannot be empty</string>
    <string name="userFailed">Create new user failed.</string>
    <string name="newUser">New User</string>
    <string name="newUserReg"> is now registered</string>
    <string name="registration">Registration</string>
    <string name="settings">Settings</string>
    <string name="tempGraphString">Temperature Graph</string>
    <string name="ChangeLang">Change Language</string>
    <string name="VBD">View Baby Data</string>
    <string name="signedOutof">Signed out of</string>
    <string name="viewCurrEmail">View Current Email</string>
    <string name="notLogged">Not logged it!</string>
    <string name="passwordUpdate">Password updated</string>
    <string name="passwordNotUpdated">Error password not updated!</string>
    <string name="rawHumidity">Humidity</string>
    <string name="charFromBase">BarChart from Firebase</string>
    <string name="HumidGraph">Humidity Graph</string>
    <string name="LightGraph">Light Value Graph</string>
    <string name="TempGraph">Temperature Graph</string>
    <string name="changeMusic">Change Music</string>
    <string name="changePassword">Change Password</string>
    <string name="Sign_Out">Sign Out</string>
    <string name="not_signed_in">Not signed in!</string>
    <string name="not_signedin_pass">Not signed in! Log in to change password!</string>
    <string name="now_playing">Now playing</string>
    <string name="song_failed">Could not play song!</string>
    <string name="not_signedin_music">Not Logged in! Log in to play music!</string>
    <string name="song_playing">Song Playing: </string>
    <string name="refresh_stream">Refreshing Stream</string>
    <string name="timestamp">timestamp</string>
    <string name="rawtemp">Temperature</string>
    <string name="rawlightvalue">Light Value</string>
    <string name="back_button">Back Button</string>
    <string name="temperature_graph_caps">TEMPERATURE GRAPH</string>
    <string name="humidity_graph_caps">HUMIDITY GRAPH</string>
    <string name="light_value_graph_caps">LIGHT VALUE GRAPH</string>
    <string name="choose_a_graph_to_view">Choose a Graph To View</string>
    <string name="currently_logging_with">Currently Logging With:</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="select_music_to_play_on_monitor">Select Music To Play On Monitor</string>
    <string name="time_will_automatically_be_written_in_the_db_as_epoch_time">Time will automatically be written in the DB as EPOCH time.</string>
    <string name="save_the_data_to_database">Save the Data to Database</string>
    <string name="canadian_french">Canadian French</string>
    <string name="english">English</string>
    <string name="choose_a_language">Choose a Language</string>
    <string name="lights_act">Adjust Lighting</string>
    <string name="the_song">The Song :</string>
    <string name="is_pause">is paused!</string>
    <string name="is_now">is now</string>
    <string name="white_colour">Colour set to white. Touch colour wheel to choose another colour!</string>
    <string name="is_stopped">stopped</string>
    <string name="paused">paused</string>

    <string-array name="Songs">
        <item >No Song Selected!</item>
        <item >Twinkle Twinkle Little Star</item>
        <item >Alphabet Song</item>
        <item >Wheels on the Bus</item>
        <item >Down by the Bay</item>
        <item >Old MacDonald</item>
    </string-array>


</resources>
