<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#121a38"
    tools:context=".TestWriteDB">

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="#FFFFFF"
        android:text="@string/time_will_automatically_be_written_in_the_db_as_epoch_time" />

    <EditText
        android:id="@+id/temperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:textColor="#FFFFFF"
        android:hint="@string/rawtemp" />

    <EditText
        android:id="@+id/humidity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="#FFFFFF"
        android:inputType="number"
        android:hint="@string/rawHumidity" />

    <EditText
        android:id="@+id/lightVal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="#FFFFFF"
        android:inputType="number"
        android:hint="@string/rawlightvalue" />
    <View
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="4dp"
        android:background="@android:color/darker_gray"/>
    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/save_the_data_to_database" />
</LinearLayout>