<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    android:background="#121a38"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="196dp"
        android:layout_height="268dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/templogo" />

    <TextView
        android:id="@+id/SongPlaying"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/allerta"
        android:text="Currently Playing: (Song Name)"
        android:textColor="#ffffff"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/playbutton"
        android:layout_width="152dp"
        android:layout_height="103dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/ic_play_arrow_black_24dp" />

    <ImageView
        android:id="@+id/pausebutton"
        android:layout_width="152dp"
        android:layout_height="103dp"
        android:layout_marginEnd="68dp"
        android:layout_marginTop="50dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/playbutton"
        app:layout_constraintHorizontal_bias="0.885"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/ic_pause_black_24dp" />

    <ImageView
        android:id="@+id/stopbutton"
        android:layout_width="152dp"
        android:layout_height="103dp"
        android:layout_marginTop="48dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="@+id/playbutton"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/ic_stop_black_24dp" />

    <ImageView
        android:id="@+id/ToLumiMonitor"
        android:layout_width="103dp"
        android:layout_height="79dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playbutton"
        app:srcCompat="@drawable/ic_tv_black_24dp" />

    <TextView
        android:id="@+id/ToLumiMonitorTitle"
        android:layout_width="139dp"
        android:layout_height="39dp"
        android:layout_marginTop="12dp"
        android:autoText="false"
        android:fontFamily="@font/allerta"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ToLumiMonitor" />

    <ImageView
        android:id="@+id/ToBabyData"
        android:layout_width="103dp"
        android:layout_height="79dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toEndOf="@+id/ToLumiMonitor"
        app:layout_constraintTop_toBottomOf="@+id/stopbutton"
        app:srcCompat="@drawable/ic_child_care_black_24dp" />

    <TextView
        android:id="@+id/ToBabyDataTitle"
        android:layout_width="136dp"
        android:layout_height="65dp"
        android:fontFamily="@font/allerta"
        android:gravity="center"
        android:text="@string/viewData"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/ToLumiMonitorTitle"
        app:layout_constraintTop_toBottomOf="@+id/ToBabyData" />

    <ImageView
        android:id="@+id/ToReminders"
        android:layout_width="103dp"
        android:layout_height="79dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toEndOf="@+id/ToBabyData"
        app:layout_constraintTop_toBottomOf="@+id/stopbutton"
        app:srcCompat="@drawable/ic_notifications_black_24dp" />

    <TextView
        android:id="@+id/ToRemindersTitle"
        android:layout_width="122dp"
        android:layout_height="61dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/allerta"
        android:gravity="center"
        android:text="@string/reminders"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/ToBabyDataTitle"
        app:layout_constraintTop_toBottomOf="@+id/ToReminders" />

</androidx.constraintlayout.widget.ConstraintLayout>